--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 # Environment Variables
+
+# Claude API Key (Required for PPT generation)
+CLAUDE_API_KEY=your_claude_api_key_here
+
+# Other API Keys
 GROQ_API_KEY=your_groq_api_key_here
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+GEMINI_API_KEY=your_gemini_api_key_here
+HUGGINGFACE_API_KEY=your_huggingface_api_key_here
